<resources>
    <string name="app_name">Instbmv</string>
    <string name="title_home">Home</string>
    <string name="title_user">Users</string>
    <string name="title_profile">Profile</string>
    <string name="title_register">Register</string>
    <string name="title_back">Back</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_name">Name:</string>
    <string name="text_fullname">Full Name</string>
    <string name="text_email">Email:</string>
    <string name="text_myemail">My Email</string>
    <string name="text_password">Password:</string>
    <string name="text_mypassword">My Password</string>
    <string name="text_signin">Sign In</string>
    <string name="text_login">Log In</string>
    <string name="text_logout">Log Out</string>
    <string name="text_logo">Logo Institutional</string>
    <string name="text_image">Image</string>
    <string name="menu_config">Configuration</string>


</resources>